# Agent_Blackwell

./: .LICENSE  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO.ipynb  DEMO.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.test  ENHANCED_WORKFLOW_USAGE.md  EXAMPLES.md  FE_PLAN.md  FE_ROADMAP.md  MVP_INCREMENTAL_DEMO_GUIDE.md  MVP_INCREMENTAL_DEMO_QUICK_REFERENCE.md  MVP_INCREMENTAL_DEMO_TEST_RESULTS.md  Makefile  OPERATION_TDD_NOTES.md  PHASE5_DEBUG_SUMMARY.md  README.md  TEST_GUIDE.md  USAGE.md  blog_notes.md  blog_notes_1.md  conftest.py  demo_mvp_incremental.py  docker-compose-test.yml  docker-compose.workers.yml  docker-compose.yml  docker-entrypoint.sh  docker.env.example  dump.rdb  e2e_test_results.json  e2e_test_results_partial.json  fix_indentation.py  hello_agents.py  pyproject.toml  pytest.ini  (+34 more)
.circleci/: config.yml
CPC_linear/: .env  README.md  client.py  coder.py  config.py  main.py  planner.py  pyproject.toml
Flagship/: ARCHITECTURE.md  ENHANCED_TDD_README.md  MIGRATION_NOTES.md  README.md  USAGE.md  WORKFLOW_COMPARISON.md  (+21 more)
complex_team/job_pipeline/: .dockerignore  Dockerfile  README-DOCKER.md  client_runner.py  docker-compose.yml  pyproject.toml  run-docker.sh  test_llm_config.py  test_orchestrator_workflow.py
complex_team/job_pipeline/agents/: base_agent.py
complex_team/job_pipeline/agents/code/: code_agent.py
complex_team/job_pipeline/agents/design/: design_agent.py
complex_team/job_pipeline/agents/orchestrator/: orchestrator_agent.py  server.py  test_orchestrator_client.py
complex_team/job_pipeline/agents/planning/: planning_agent.py  server.py
complex_team/job_pipeline/agents/review/: review_agent.py
complex_team/job_pipeline/agents/specification/: specification_agent.py
complex_team/job_pipeline/agents/test/: test_agent.py
complex_team/job_pipeline/agents/testing/: test_agent.py
complex_team/job_pipeline/config/: config.py  prompt_schemas.py
complex_team/job_pipeline/docs/: acp_architecture_insights.md
complex_team/job_pipeline/mcp/: git_tools.py
complex_team/job_pipeline/output/: LoginComponent.js
complex_team/job_pipeline/state/: state_manager.py
complex_team/job_pipeline/tests/: test_base_agent.py  test_integration.py  test_state_manager.py
complex_team/job_pipeline/ui/: review_app.py
(+1031 files in other folders)
