[tool.poetry]
name = "agent-orchestration"
version = "0.1.0"
description = "Agent-based orchestration system with ML pipeline integration"
authors = ["Christopher Blackwell"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.115.13,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
redis = ">=6.2.0,<7.0.0"
pydantic = ">=2.11.7,<3.0.0"
langchain = ">=0.3.26,<0.4.0"
langchain-community = ">=0.3.26,<0.4.0"
pinecone = ">=7.2.0,<8.0.0"
openai = ">=1.90.0,<2.0.0"
langchain-openai = ">=0.3.24,<0.4.0"
python-multipart = ">=0.0.20,<0.0.21"
slack-bolt = ">=1.23.0,<2.0.0"
slack-sdk = ">=3.35.0,<4.0.0"
prometheus-client = ">=0.22.1,<0.23.0"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
pytest-asyncio = "^1.0.0"
