[project]
name = "complex_team_job_pipeline"
version = "0.1.0"
description = "Complex Team Job Pipeline for ACP SDK"
# Removed readme field to avoid path issues
requires-python = ">=3.13"

# Main dependencies
dependencies = [
    # Core ACP SDK and related frameworks
    "acp_sdk>=0.13.0",
    "beeai-framework>=0.1.0",
    
    # Environment management
    "python-dotenv>=1.1.1",
    
    # Tool calling and LLM support
    "mcp>=1.0.0",
    "smolagents>=0.1.0",
    "litellm>=1.0.0",
    
    # Networking and async
    "httpx>=0.25.0",
    "asyncio>=3.4.3",
    
    # UI components
    "streamlit>=1.28.0",
    
    # Utilities
    "rich>=13.0.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "black>=24.1.0",
    "ruff>=0.3.0",
]

[tool.setuptools]
packages = ["agents", "config", "mcp", "state", "ui"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py313"]

# dotenv


